- Added code to manage tranche 2 release.

--- a/kardioml/models/deepecg/notebooks/2_create_cross_validation_dataset.ipynb
+++ b/kardioml/models/deepecg/notebooks/2_create_cross_validation_dataset.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,12 +75,13 @@
    "metadata": {},
    "source": [
     "# Split Physionet 2020 Training Data\n",
-    "## Create Training Lookup File"
+    "## Create Training Lookup File\n",
+    "#### Tranche 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -111,34 +112,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>A0001</td>\n",
        "      <td>RBBB</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>A0002</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>A0003</td>\n",
        "      <td>AF</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>A0004</td>\n",
        "      <td>AF</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>A0005</td>\n",
        "      <td>PVC</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -146,14 +147,14 @@
       ],
       "text/plain": [
        "  filename  labels                                               path\n",
-       "0    A0001    RBBB  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
-       "1    A0002  Normal  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
-       "2    A0003      AF  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
-       "3    A0004      AF  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
-       "4    A0005     PVC  C:\\Users\\sebig\\Documents\\Code\\physionet-challe..."
+       "0    A0001    RBBB  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "1    A0002  Normal  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "2    A0003      AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "3    A0004      AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "4    A0005     PVC  C:\\Users\\sebastian goodfellow\\Documents\\code\\p..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,12 +185,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Trache 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combine Tranche 1 and 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Split and Save"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,12 +229,16 @@
     "for cv_fold, (train_index, val_index) in enumerate(skf.split(data, data['labels'])):\n",
     "\n",
     "    # Lookup file\n",
-    "    training_lookup = {'train': data.loc[train_index, 'filename'].tolist(), \n",
-    "                       'val': data.loc[val_index, 'filename'].tolist()}\n",
+    "    training_lookup = {'train': data.loc[train_index, 'path'].tolist(), \n",
+    "                       'val': data.loc[val_index, 'path'].tolist()}\n",
     "    \n",
     "    # Add augmentationd data\n",
-    "    training_lookup['train'].extend(paths)\n",
-    "    random.shuffle(training_lookup['train'])\n",
+    "#     training_lookup['val'].extend(paths)\n",
+    "#     random.shuffle(training_lookup['val'])\n",
+    "#     random.shuffle(training_lookup['val'])\n",
+    "#     random.shuffle(training_lookup['val'])\n",
+    "#     random.shuffle(training_lookup['val'])\n",
+    "#     random.shuffle(training_lookup['val'])\n",
     "    \n",
     "    # Save file\n",
     "    os.makedirs(os.path.join(DATA_PATH, 'deepecg', 'cross_validation', str(cv_fold + 1)), exist_ok=True)\n",
@@ -230,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
