--- a/kardioml/models/deepecg/notebooks/5_hyper_parameter_tuning_test.ipynb
+++ b/kardioml/models/deepecg/notebooks/5_hyper_parameter_tuning_test.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -99,7 +99,224 @@
       "output_conv2 | shape = (?, 3750, 512)\n",
       "gap | shape = (?, 512)\n",
       "logits | shape = (?, 9)\n",
-      "Training Start\n"
+      "Training Start\n",
+      "Training End\n",
+      "\n",
+      "Hyper-Parameter: 300\n",
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "Initializing Model\n",
+      "input | shape = (?, 18000, 12)\n",
+      "stem_layer_1 | shape = (?, 9000, 128)\n",
+      "stem_layer_2 | shape = (?, 4500, 128)\n",
+      "res_layer_1_skip | shape = (?, 4500, 128)\n",
+      "res_layer_2_skip | shape = (?, 4500, 128)\n",
+      "res_layer_3_skip | shape = (?, 4500, 128)\n",
+      "res_layer_4_skip | shape = (?, 4500, 128)\n",
+      "res_layer_5_skip | shape = (?, 4500, 128)\n",
+      "res_layer_6_skip | shape = (?, 4500, 128)\n",
+      "res_layer_7_skip | shape = (?, 4500, 128)\n",
+      "res_layer_8_skip | shape = (?, 4500, 128)\n",
+      "res_layer_9_skip | shape = (?, 4500, 128)\n",
+      "output_skip_addition | shape = (?, 4500, 128)\n",
+      "output_conv1 | shape = (?, 4500, 256)\n",
+      "output_conv2 | shape = (?, 4500, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "input | shape = (?, 18000, 12)\n",
+      "stem_layer_1 | shape = (?, 9000, 128)\n",
+      "stem_layer_2 | shape = (?, 4500, 128)\n",
+      "res_layer_1_skip | shape = (?, 4500, 128)\n",
+      "res_layer_2_skip | shape = (?, 4500, 128)\n",
+      "res_layer_3_skip | shape = (?, 4500, 128)\n",
+      "res_layer_4_skip | shape = (?, 4500, 128)\n",
+      "res_layer_5_skip | shape = (?, 4500, 128)\n",
+      "res_layer_6_skip | shape = (?, 4500, 128)\n",
+      "res_layer_7_skip | shape = (?, 4500, 128)\n",
+      "res_layer_8_skip | shape = (?, 4500, 128)\n",
+      "res_layer_9_skip | shape = (?, 4500, 128)\n",
+      "output_skip_addition | shape = (?, 4500, 128)\n",
+      "output_conv1 | shape = (?, 4500, 256)\n",
+      "output_conv2 | shape = (?, 4500, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "Training Start\n",
+      "Early stopping at epoch 60\n",
+      "Training End\n",
+      "\n",
+      "Hyper-Parameter: 350\n",
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "Initializing Model\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "Training Start\n",
+      "Early stopping at epoch 39\n",
+      "Training End\n",
+      "\n",
+      "Hyper-Parameter: 400\n",
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "Initializing Model\n",
+      "input | shape = (?, 24000, 12)\n",
+      "stem_layer_1 | shape = (?, 12000, 128)\n",
+      "stem_layer_2 | shape = (?, 6000, 128)\n",
+      "res_layer_1_skip | shape = (?, 6000, 128)\n",
+      "res_layer_2_skip | shape = (?, 6000, 128)\n",
+      "res_layer_3_skip | shape = (?, 6000, 128)\n",
+      "res_layer_4_skip | shape = (?, 6000, 128)\n",
+      "res_layer_5_skip | shape = (?, 6000, 128)\n",
+      "res_layer_6_skip | shape = (?, 6000, 128)\n",
+      "res_layer_7_skip | shape = (?, 6000, 128)\n",
+      "res_layer_8_skip | shape = (?, 6000, 128)\n",
+      "res_layer_9_skip | shape = (?, 6000, 128)\n",
+      "output_skip_addition | shape = (?, 6000, 128)\n",
+      "output_conv1 | shape = (?, 6000, 256)\n",
+      "output_conv2 | shape = (?, 6000, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "input | shape = (?, 24000, 12)\n",
+      "stem_layer_1 | shape = (?, 12000, 128)\n",
+      "stem_layer_2 | shape = (?, 6000, 128)\n",
+      "res_layer_1_skip | shape = (?, 6000, 128)\n",
+      "res_layer_2_skip | shape = (?, 6000, 128)\n",
+      "res_layer_3_skip | shape = (?, 6000, 128)\n",
+      "res_layer_4_skip | shape = (?, 6000, 128)\n",
+      "res_layer_5_skip | shape = (?, 6000, 128)\n",
+      "res_layer_6_skip | shape = (?, 6000, 128)\n",
+      "res_layer_7_skip | shape = (?, 6000, 128)\n",
+      "res_layer_8_skip | shape = (?, 6000, 128)\n",
+      "res_layer_9_skip | shape = (?, 6000, 128)\n",
+      "output_skip_addition | shape = (?, 6000, 128)\n",
+      "output_conv1 | shape = (?, 6000, 256)\n",
+      "output_conv2 | shape = (?, 6000, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "Training Start\n",
+      "Early stopping at epoch 40\n",
+      "Training End\n",
+      "\n",
+      "Hyper-Parameter: 450\n",
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "Initializing Model\n",
+      "input | shape = (?, 27000, 12)\n",
+      "stem_layer_1 | shape = (?, 13500, 128)\n",
+      "stem_layer_2 | shape = (?, 6750, 128)\n",
+      "res_layer_1_skip | shape = (?, 6750, 128)\n",
+      "res_layer_2_skip | shape = (?, 6750, 128)\n",
+      "res_layer_3_skip | shape = (?, 6750, 128)\n",
+      "res_layer_4_skip | shape = (?, 6750, 128)\n",
+      "res_layer_5_skip | shape = (?, 6750, 128)\n",
+      "res_layer_6_skip | shape = (?, 6750, 128)\n",
+      "res_layer_7_skip | shape = (?, 6750, 128)\n",
+      "res_layer_8_skip | shape = (?, 6750, 128)\n",
+      "res_layer_9_skip | shape = (?, 6750, 128)\n",
+      "output_skip_addition | shape = (?, 6750, 128)\n",
+      "output_conv1 | shape = (?, 6750, 256)\n",
+      "output_conv2 | shape = (?, 6750, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "input | shape = (?, 27000, 12)\n",
+      "stem_layer_1 | shape = (?, 13500, 128)\n",
+      "stem_layer_2 | shape = (?, 6750, 128)\n",
+      "res_layer_1_skip | shape = (?, 6750, 128)\n",
+      "res_layer_2_skip | shape = (?, 6750, 128)\n",
+      "res_layer_3_skip | shape = (?, 6750, 128)\n",
+      "res_layer_4_skip | shape = (?, 6750, 128)\n",
+      "res_layer_5_skip | shape = (?, 6750, 128)\n",
+      "res_layer_6_skip | shape = (?, 6750, 128)\n",
+      "res_layer_7_skip | shape = (?, 6750, 128)\n",
+      "res_layer_8_skip | shape = (?, 6750, 128)\n",
+      "res_layer_9_skip | shape = (?, 6750, 128)\n",
+      "output_skip_addition | shape = (?, 6750, 128)\n",
+      "output_conv1 | shape = (?, 6750, 256)\n",
+      "output_conv2 | shape = (?, 6750, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "Training Start\n",
+      "Early stopping at epoch 53\n",
+      "Training End\n",
+      "\n",
+      "Hyper-Parameter: 500\n",
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "Initializing Model\n",
+      "input | shape = (?, 30000, 12)\n",
+      "stem_layer_1 | shape = (?, 15000, 128)\n",
+      "stem_layer_2 | shape = (?, 7500, 128)\n",
+      "res_layer_1_skip | shape = (?, 7500, 128)\n",
+      "res_layer_2_skip | shape = (?, 7500, 128)\n",
+      "res_layer_3_skip | shape = (?, 7500, 128)\n",
+      "res_layer_4_skip | shape = (?, 7500, 128)\n",
+      "res_layer_5_skip | shape = (?, 7500, 128)\n",
+      "res_layer_6_skip | shape = (?, 7500, 128)\n",
+      "res_layer_7_skip | shape = (?, 7500, 128)\n",
+      "res_layer_8_skip | shape = (?, 7500, 128)\n",
+      "res_layer_9_skip | shape = (?, 7500, 128)\n",
+      "output_skip_addition | shape = (?, 7500, 128)\n",
+      "output_conv1 | shape = (?, 7500, 256)\n",
+      "output_conv2 | shape = (?, 7500, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "input | shape = (?, 30000, 12)\n",
+      "stem_layer_1 | shape = (?, 15000, 128)\n",
+      "stem_layer_2 | shape = (?, 7500, 128)\n",
+      "res_layer_1_skip | shape = (?, 7500, 128)\n",
+      "res_layer_2_skip | shape = (?, 7500, 128)\n",
+      "res_layer_3_skip | shape = (?, 7500, 128)\n",
+      "res_layer_4_skip | shape = (?, 7500, 128)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res_layer_5_skip | shape = (?, 7500, 128)\n",
+      "res_layer_6_skip | shape = (?, 7500, 128)\n",
+      "res_layer_7_skip | shape = (?, 7500, 128)\n",
+      "res_layer_8_skip | shape = (?, 7500, 128)\n",
+      "res_layer_9_skip | shape = (?, 7500, 128)\n",
+      "output_skip_addition | shape = (?, 7500, 128)\n",
+      "output_conv1 | shape = (?, 7500, 256)\n",
+      "output_conv2 | shape = (?, 7500, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "Training Start\n",
+      "Training End\n",
+      "\n"
      ]
     }
    ],
@@ -108,7 +325,7 @@
     "data_path = os.path.join(DATA_PATH, 'formatted')\n",
     "\n",
     "# Set model name\n",
-    "training_run = 'hpt_10'\n",
+    "training_run = 'hpt_11'\n",
     "\n",
     "# Set sample length (seconds)\n",
     "duration = 60\n",
@@ -195,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
