--- a/notebooks/2_visualize_formatted_data.ipynb
+++ b/notebooks/2_visualize_formatted_data.ipynb
@@ -47,18 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e934509f779426f8ace4ecafab0d0dc",
+       "model_id": "7abf3923ca8e4b9abc0adf8551c10f9b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=3438, description='filename_id', max=6876), Output()), _dom_classes=('wi…"
+       "interactive(children=(IntSlider(value=239, description='filename_id', max=478), Output()), _dom_classes=('widg…"
       ]
      },
      "metadata": {},
@@ -67,8 +67,15 @@
    ],
    "source": [
     "# Launch interactive plotter\n",
-    "waveform_plot_interact()"
+    "waveform_plot_interact(dataset='physionet_2020_2')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
