--- a/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
+++ b/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -56,12 +47,13 @@
    "metadata": {},
    "source": [
     "# Split Physionet 2020 Training Data\n",
-    "## Create Training Lookup File"
+    "## Create Training Lookup File\n",
+    "#### Tranche 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,34 +84,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>A0001</td>\n",
        "      <td>RBBB</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>A0002</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>A0003</td>\n",
        "      <td>AF</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>A0004</td>\n",
        "      <td>AF</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>A0005</td>\n",
        "      <td>PVC</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -127,35 +119,239 @@
       ],
       "text/plain": [
        "  filename  labels                                               path\n",
-       "0    A0001    RBBB  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
-       "1    A0002  Normal  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
-       "2    A0003      AF  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
-       "3    A0004      AF  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...\n",
-       "4    A0005     PVC  C:\\Users\\sebig\\Documents\\Code\\physionet-challe..."
+       "0    A0001    RBBB  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "1    A0002  Normal  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "2    A0003      AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "3    A0004      AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "4    A0005     PVC  C:\\Users\\sebastian goodfellow\\Documents\\code\\p..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get meta data files\n",
-    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'physionet_2020', 'formatted')) \n",
+    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'physionet_2020_1', 'formatted')) \n",
     "             if 'json' in file]\n",
     "\n",
     "# Get label for each file\n",
     "labels = list()\n",
     "for filename in filenames:\n",
-    "    meta_data = json.load(open(os.path.join(DATA_PATH, 'physionet_2020', 'formatted', '{}.json'.format(filename))))\n",
+    "    meta_data = json.load(open(os.path.join(DATA_PATH, 'physionet_2020_1', 'formatted', '{}.json'.format(filename))))\n",
     "    labels.append('{}-{}'.format(meta_data['labels'][0], meta_data['labels'][1]) if len(meta_data['labels']) > 1 \n",
     "                                 else meta_data['labels'][0])\n",
     "\n",
     "# Combine\n",
-    "data = pd.DataFrame({'filename': filenames, 'labels': labels})\n",
+    "data_1 = pd.DataFrame({'filename': filenames, 'labels': labels})\n",
     "\n",
     "# Add path\n",
-    "data['path'] = data['filename'].map(lambda filename: os.path.join(DATA_PATH, 'physionet_2020', 'formatted', filename))\n",
+    "data_1['path'] = data_1['filename'].map(lambda filename: os.path.join(DATA_PATH, 'physionet_2020_1', 'formatted', filename))\n",
+    "\n",
+    "# View DataFrame\n",
+    "data_1.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tranche 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Q0023</td>\n",
+       "      <td>STE</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Q0026</td>\n",
+       "      <td>PAC</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Q0033</td>\n",
+       "      <td>LBBB</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Q0037</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Q0040</td>\n",
+       "      <td>PAC</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  filename labels                                               path\n",
+       "0    Q0023    STE  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "1    Q0026    PAC  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "2    Q0033   LBBB  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "3    Q0037     AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "4    Q0040    PAC  C:\\Users\\sebastian goodfellow\\Documents\\code\\p..."
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get meta data files\n",
+    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'physionet_2020_2', 'formatted')) \n",
+    "             if 'json' in file]\n",
+    "\n",
+    "# Get label for each file\n",
+    "labels = list()\n",
+    "for filename in filenames:\n",
+    "    meta_data = json.load(open(os.path.join(DATA_PATH, 'physionet_2020_2', 'formatted', '{}.json'.format(filename))))\n",
+    "    labels.append('{}'.format(meta_data['labels'][0]) if len(meta_data['labels']) > 1 \n",
+    "                                 else meta_data['labels'][0])\n",
+    "\n",
+    "# Combine\n",
+    "data_2 = pd.DataFrame({'filename': filenames, 'labels': labels})\n",
+    "\n",
+    "# Add path\n",
+    "data_2['path'] = data_2['filename'].map(lambda filename: os.path.join(DATA_PATH, 'physionet_2020_2', 'formatted', filename))\n",
+    "\n",
+    "# View DataFrame\n",
+    "data_2.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combine Tranche 1 and 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>A0001</td>\n",
+       "      <td>RBBB</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>A0002</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>A0003</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>A0004</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>A0005</td>\n",
+       "      <td>PVC</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  filename  labels                                               path\n",
+       "0    A0001    RBBB  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "1    A0002  Normal  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "2    A0003      AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "3    A0004      AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "4    A0005     PVC  C:\\Users\\sebastian goodfellow\\Documents\\code\\p..."
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merge\n",
+    "data = pd.concat([data_1, data_2], ignore_index=True, axis=0).reset_index(drop=True)\n",
     "\n",
     "# View DataFrame\n",
     "data.head()"
@@ -170,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,8 +401,12 @@
     "         for file in os.listdir(os.path.join(DATA_PATH, 'zheng_2020', 'formatted')) if 'json' in file]\n",
     "\n",
     "# Add to lookup dictionary\n",
-    "training_lookup['train'].extend(paths)\n",
-    "random.shuffle(training_lookup['train'])"
+    "# training_lookup['train'].extend(paths)\n",
+    "# random.shuffle(training_lookup['train'])\n",
+    "# random.shuffle(training_lookup['train'])\n",
+    "# random.shuffle(training_lookup['train'])\n",
+    "# random.shuffle(training_lookup['train'])\n",
+    "# random.shuffle(training_lookup['train'])"
    ]
   },
   {
@@ -218,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
