--- a/kardioml/models/deepecg/notebooks/4_cross_validate_test.ipynb
+++ b/kardioml/models/deepecg/notebooks/4_cross_validate_test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,229 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Fold 1\n",
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "Initializing Model\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "Training Start\n",
+      "Early stopping at epoch 56\n",
+      "Training End\n",
+      "\n",
+      "Cross-Validation Fold 2\n",
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "Initializing Model\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "Training Start\n",
+      "Early stopping at epoch 50\n",
+      "Training End\n",
+      "\n",
+      "Cross-Validation Fold 3\n",
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "Initializing Model\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "Training Start\n",
+      "Early stopping at epoch 53\n",
+      "Training End\n",
+      "\n",
+      "Cross-Validation Fold 4\n",
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "Initializing Model\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "Training Start\n",
+      "Training End\n",
+      "\n",
+      "Cross-Validation Fold 5\n",
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "Initializing Model\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "input | shape = (?, 21000, 12)\n",
+      "stem_layer_1 | shape = (?, 10500, 128)\n",
+      "stem_layer_2 | shape = (?, 5250, 128)\n",
+      "res_layer_1_skip | shape = (?, 5250, 128)\n",
+      "res_layer_2_skip | shape = (?, 5250, 128)\n",
+      "res_layer_3_skip | shape = (?, 5250, 128)\n",
+      "res_layer_4_skip | shape = (?, 5250, 128)\n",
+      "res_layer_5_skip | shape = (?, 5250, 128)\n",
+      "res_layer_6_skip | shape = (?, 5250, 128)\n",
+      "res_layer_7_skip | shape = (?, 5250, 128)\n",
+      "res_layer_8_skip | shape = (?, 5250, 128)\n",
+      "res_layer_9_skip | shape = (?, 5250, 128)\n",
+      "output_skip_addition | shape = (?, 5250, 128)\n",
+      "output_conv1 | shape = (?, 5250, 256)\n",
+      "output_conv2 | shape = (?, 5250, 512)\n",
+      "gap | shape = (?, 512)\n",
+      "logits | shape = (?, 9)\n",
+      "Training Start\n"
+     ]
+    }
+   ],
    "source": [
     "# Set data path\n",
     "data_path = os.path.join(DATA_PATH, 'formatted')\n",
     "\n",
     "# Set model name\n",
-    "training_run = '13'\n",
+    "training_run = '23'\n",
+    "\n",
+    "# Set sample length (seconds)\n",
+    "duration = 60\n",
     "\n",
     "# Loop through CV folds\n",
     "for cv_fold in np.arange(1, 6):\n",
@@ -88,8 +304,11 @@
     "    # Set randome states\n",
     "    seed = 0                                                         \n",
     "\n",
+    "    # Set sample frequency\n",
+    "    fs = 350\n",
+    "\n",
     "    # Get training dataset dimensions\n",
-    "    length, channels = (30000, len(ECG_LEADS))     \n",
+    "    length, channels = (int(duration * fs), len(ECG_LEADS))          \n",
     "\n",
     "    # Number of classes\n",
     "    classes = LABELS_COUNT\n",
@@ -97,8 +316,14 @@
     "    # Choose network\n",
     "    network_name = 'DeepECGV1'\n",
     "\n",
+    "    # Set hyper-parameter\n",
+    "    hyper_params = {'num_res_layers': 9, 'drop_rate': 0.3, 'kernel_size': 3, \n",
+    "                    'conv_filts': 128, 'res_filts': 128, 'skip_filts': 128, \n",
+    "                    'dilation': True, 'fs': fs}\n",
+    "\n",
     "    # Set network inputs\n",
-    "    network_parameters = {'length': length, 'channels': channels, 'classes': classes, 'seed': seed}\n",
+    "    network_parameters = {'length': length, 'channels': channels, 'classes': classes, 'seed': seed,\n",
+    "                          'hyper_params': hyper_params}\n",
     "\n",
     "    # Create model\n",
     "    print('Initializing Model')\n",
