--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -53,12 +44,13 @@
    "metadata": {},
    "source": [
     "# Download and Format Dataset\n",
-    "## Physionet 2020"
+    "## Physionet 2020\n",
+    "### Tranche 1 (February 7, 2020)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +64,38 @@
    ],
    "source": [
     "# Initialize data formater\n",
-    "data = FormatDataPhysionet2020()\n",
+    "data = FormatDataPhysionet2020(tranche=1)\n",
+    "\n",
+    "# Run format process\n",
+    "data.format(extract=True, debug=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tranche 2 (May 20, 2020)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n",
+      "Extracting dataset...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize data formater\n",
+    "data = FormatDataPhysionet2020(tranche=2)\n",
     "\n",
     "# Run format process\n",
     "data.format(extract=True, debug=False)"
@@ -88,17 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Zheng et al. (2020) dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataZheng2020()\n",
@@ -124,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
