--- a/kardioml/models/deepecg/notebooks/5_hyper_parameter_tuning_test.ipynb
+++ b/kardioml/models/deepecg/notebooks/5_hyper_parameter_tuning_test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,280 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hyper-Parameter: 250\n",
-      "Workstation has 1 CPUs.\n",
-      "Workstation has 2 GPUs.\n",
-      "Initializing Model\n",
-      "input | shape = (?, 15000, 12)\n",
-      "stem_layer_1 | shape = (?, 7500, 128)\n",
-      "stem_layer_2 | shape = (?, 3750, 128)\n",
-      "res_layer_1_skip | shape = (?, 3750, 128)\n",
-      "res_layer_2_skip | shape = (?, 3750, 128)\n",
-      "res_layer_3_skip | shape = (?, 3750, 128)\n",
-      "res_layer_4_skip | shape = (?, 3750, 128)\n",
-      "res_layer_5_skip | shape = (?, 3750, 128)\n",
-      "res_layer_6_skip | shape = (?, 3750, 128)\n",
-      "res_layer_7_skip | shape = (?, 3750, 128)\n",
-      "res_layer_8_skip | shape = (?, 3750, 128)\n",
-      "res_layer_9_skip | shape = (?, 3750, 128)\n",
-      "output_skip_addition | shape = (?, 3750, 128)\n",
-      "output_conv1 | shape = (?, 3750, 256)\n",
-      "output_conv2 | shape = (?, 3750, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "input | shape = (?, 15000, 12)\n",
-      "stem_layer_1 | shape = (?, 7500, 128)\n",
-      "stem_layer_2 | shape = (?, 3750, 128)\n",
-      "res_layer_1_skip | shape = (?, 3750, 128)\n",
-      "res_layer_2_skip | shape = (?, 3750, 128)\n",
-      "res_layer_3_skip | shape = (?, 3750, 128)\n",
-      "res_layer_4_skip | shape = (?, 3750, 128)\n",
-      "res_layer_5_skip | shape = (?, 3750, 128)\n",
-      "res_layer_6_skip | shape = (?, 3750, 128)\n",
-      "res_layer_7_skip | shape = (?, 3750, 128)\n",
-      "res_layer_8_skip | shape = (?, 3750, 128)\n",
-      "res_layer_9_skip | shape = (?, 3750, 128)\n",
-      "output_skip_addition | shape = (?, 3750, 128)\n",
-      "output_conv1 | shape = (?, 3750, 256)\n",
-      "output_conv2 | shape = (?, 3750, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "Training Start\n",
-      "Training End\n",
-      "\n",
-      "Hyper-Parameter: 300\n",
-      "Workstation has 1 CPUs.\n",
-      "Workstation has 2 GPUs.\n",
-      "Initializing Model\n",
-      "input | shape = (?, 18000, 12)\n",
-      "stem_layer_1 | shape = (?, 9000, 128)\n",
-      "stem_layer_2 | shape = (?, 4500, 128)\n",
-      "res_layer_1_skip | shape = (?, 4500, 128)\n",
-      "res_layer_2_skip | shape = (?, 4500, 128)\n",
-      "res_layer_3_skip | shape = (?, 4500, 128)\n",
-      "res_layer_4_skip | shape = (?, 4500, 128)\n",
-      "res_layer_5_skip | shape = (?, 4500, 128)\n",
-      "res_layer_6_skip | shape = (?, 4500, 128)\n",
-      "res_layer_7_skip | shape = (?, 4500, 128)\n",
-      "res_layer_8_skip | shape = (?, 4500, 128)\n",
-      "res_layer_9_skip | shape = (?, 4500, 128)\n",
-      "output_skip_addition | shape = (?, 4500, 128)\n",
-      "output_conv1 | shape = (?, 4500, 256)\n",
-      "output_conv2 | shape = (?, 4500, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "input | shape = (?, 18000, 12)\n",
-      "stem_layer_1 | shape = (?, 9000, 128)\n",
-      "stem_layer_2 | shape = (?, 4500, 128)\n",
-      "res_layer_1_skip | shape = (?, 4500, 128)\n",
-      "res_layer_2_skip | shape = (?, 4500, 128)\n",
-      "res_layer_3_skip | shape = (?, 4500, 128)\n",
-      "res_layer_4_skip | shape = (?, 4500, 128)\n",
-      "res_layer_5_skip | shape = (?, 4500, 128)\n",
-      "res_layer_6_skip | shape = (?, 4500, 128)\n",
-      "res_layer_7_skip | shape = (?, 4500, 128)\n",
-      "res_layer_8_skip | shape = (?, 4500, 128)\n",
-      "res_layer_9_skip | shape = (?, 4500, 128)\n",
-      "output_skip_addition | shape = (?, 4500, 128)\n",
-      "output_conv1 | shape = (?, 4500, 256)\n",
-      "output_conv2 | shape = (?, 4500, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "Training Start\n",
-      "Early stopping at epoch 60\n",
-      "Training End\n",
-      "\n",
-      "Hyper-Parameter: 350\n",
-      "Workstation has 1 CPUs.\n",
-      "Workstation has 2 GPUs.\n",
-      "Initializing Model\n",
-      "input | shape = (?, 21000, 12)\n",
-      "stem_layer_1 | shape = (?, 10500, 128)\n",
-      "stem_layer_2 | shape = (?, 5250, 128)\n",
-      "res_layer_1_skip | shape = (?, 5250, 128)\n",
-      "res_layer_2_skip | shape = (?, 5250, 128)\n",
-      "res_layer_3_skip | shape = (?, 5250, 128)\n",
-      "res_layer_4_skip | shape = (?, 5250, 128)\n",
-      "res_layer_5_skip | shape = (?, 5250, 128)\n",
-      "res_layer_6_skip | shape = (?, 5250, 128)\n",
-      "res_layer_7_skip | shape = (?, 5250, 128)\n",
-      "res_layer_8_skip | shape = (?, 5250, 128)\n",
-      "res_layer_9_skip | shape = (?, 5250, 128)\n",
-      "output_skip_addition | shape = (?, 5250, 128)\n",
-      "output_conv1 | shape = (?, 5250, 256)\n",
-      "output_conv2 | shape = (?, 5250, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "input | shape = (?, 21000, 12)\n",
-      "stem_layer_1 | shape = (?, 10500, 128)\n",
-      "stem_layer_2 | shape = (?, 5250, 128)\n",
-      "res_layer_1_skip | shape = (?, 5250, 128)\n",
-      "res_layer_2_skip | shape = (?, 5250, 128)\n",
-      "res_layer_3_skip | shape = (?, 5250, 128)\n",
-      "res_layer_4_skip | shape = (?, 5250, 128)\n",
-      "res_layer_5_skip | shape = (?, 5250, 128)\n",
-      "res_layer_6_skip | shape = (?, 5250, 128)\n",
-      "res_layer_7_skip | shape = (?, 5250, 128)\n",
-      "res_layer_8_skip | shape = (?, 5250, 128)\n",
-      "res_layer_9_skip | shape = (?, 5250, 128)\n",
-      "output_skip_addition | shape = (?, 5250, 128)\n",
-      "output_conv1 | shape = (?, 5250, 256)\n",
-      "output_conv2 | shape = (?, 5250, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "Training Start\n",
-      "Early stopping at epoch 39\n",
-      "Training End\n",
-      "\n",
-      "Hyper-Parameter: 400\n",
-      "Workstation has 1 CPUs.\n",
-      "Workstation has 2 GPUs.\n",
-      "Initializing Model\n",
-      "input | shape = (?, 24000, 12)\n",
-      "stem_layer_1 | shape = (?, 12000, 128)\n",
-      "stem_layer_2 | shape = (?, 6000, 128)\n",
-      "res_layer_1_skip | shape = (?, 6000, 128)\n",
-      "res_layer_2_skip | shape = (?, 6000, 128)\n",
-      "res_layer_3_skip | shape = (?, 6000, 128)\n",
-      "res_layer_4_skip | shape = (?, 6000, 128)\n",
-      "res_layer_5_skip | shape = (?, 6000, 128)\n",
-      "res_layer_6_skip | shape = (?, 6000, 128)\n",
-      "res_layer_7_skip | shape = (?, 6000, 128)\n",
-      "res_layer_8_skip | shape = (?, 6000, 128)\n",
-      "res_layer_9_skip | shape = (?, 6000, 128)\n",
-      "output_skip_addition | shape = (?, 6000, 128)\n",
-      "output_conv1 | shape = (?, 6000, 256)\n",
-      "output_conv2 | shape = (?, 6000, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "input | shape = (?, 24000, 12)\n",
-      "stem_layer_1 | shape = (?, 12000, 128)\n",
-      "stem_layer_2 | shape = (?, 6000, 128)\n",
-      "res_layer_1_skip | shape = (?, 6000, 128)\n",
-      "res_layer_2_skip | shape = (?, 6000, 128)\n",
-      "res_layer_3_skip | shape = (?, 6000, 128)\n",
-      "res_layer_4_skip | shape = (?, 6000, 128)\n",
-      "res_layer_5_skip | shape = (?, 6000, 128)\n",
-      "res_layer_6_skip | shape = (?, 6000, 128)\n",
-      "res_layer_7_skip | shape = (?, 6000, 128)\n",
-      "res_layer_8_skip | shape = (?, 6000, 128)\n",
-      "res_layer_9_skip | shape = (?, 6000, 128)\n",
-      "output_skip_addition | shape = (?, 6000, 128)\n",
-      "output_conv1 | shape = (?, 6000, 256)\n",
-      "output_conv2 | shape = (?, 6000, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "Training Start\n",
-      "Early stopping at epoch 40\n",
-      "Training End\n",
-      "\n",
-      "Hyper-Parameter: 450\n",
-      "Workstation has 1 CPUs.\n",
-      "Workstation has 2 GPUs.\n",
-      "Initializing Model\n",
-      "input | shape = (?, 27000, 12)\n",
-      "stem_layer_1 | shape = (?, 13500, 128)\n",
-      "stem_layer_2 | shape = (?, 6750, 128)\n",
-      "res_layer_1_skip | shape = (?, 6750, 128)\n",
-      "res_layer_2_skip | shape = (?, 6750, 128)\n",
-      "res_layer_3_skip | shape = (?, 6750, 128)\n",
-      "res_layer_4_skip | shape = (?, 6750, 128)\n",
-      "res_layer_5_skip | shape = (?, 6750, 128)\n",
-      "res_layer_6_skip | shape = (?, 6750, 128)\n",
-      "res_layer_7_skip | shape = (?, 6750, 128)\n",
-      "res_layer_8_skip | shape = (?, 6750, 128)\n",
-      "res_layer_9_skip | shape = (?, 6750, 128)\n",
-      "output_skip_addition | shape = (?, 6750, 128)\n",
-      "output_conv1 | shape = (?, 6750, 256)\n",
-      "output_conv2 | shape = (?, 6750, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "input | shape = (?, 27000, 12)\n",
-      "stem_layer_1 | shape = (?, 13500, 128)\n",
-      "stem_layer_2 | shape = (?, 6750, 128)\n",
-      "res_layer_1_skip | shape = (?, 6750, 128)\n",
-      "res_layer_2_skip | shape = (?, 6750, 128)\n",
-      "res_layer_3_skip | shape = (?, 6750, 128)\n",
-      "res_layer_4_skip | shape = (?, 6750, 128)\n",
-      "res_layer_5_skip | shape = (?, 6750, 128)\n",
-      "res_layer_6_skip | shape = (?, 6750, 128)\n",
-      "res_layer_7_skip | shape = (?, 6750, 128)\n",
-      "res_layer_8_skip | shape = (?, 6750, 128)\n",
-      "res_layer_9_skip | shape = (?, 6750, 128)\n",
-      "output_skip_addition | shape = (?, 6750, 128)\n",
-      "output_conv1 | shape = (?, 6750, 256)\n",
-      "output_conv2 | shape = (?, 6750, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "Training Start\n",
-      "Early stopping at epoch 53\n",
-      "Training End\n",
-      "\n",
-      "Hyper-Parameter: 500\n",
-      "Workstation has 1 CPUs.\n",
-      "Workstation has 2 GPUs.\n",
-      "Initializing Model\n",
-      "input | shape = (?, 30000, 12)\n",
-      "stem_layer_1 | shape = (?, 15000, 128)\n",
-      "stem_layer_2 | shape = (?, 7500, 128)\n",
-      "res_layer_1_skip | shape = (?, 7500, 128)\n",
-      "res_layer_2_skip | shape = (?, 7500, 128)\n",
-      "res_layer_3_skip | shape = (?, 7500, 128)\n",
-      "res_layer_4_skip | shape = (?, 7500, 128)\n",
-      "res_layer_5_skip | shape = (?, 7500, 128)\n",
-      "res_layer_6_skip | shape = (?, 7500, 128)\n",
-      "res_layer_7_skip | shape = (?, 7500, 128)\n",
-      "res_layer_8_skip | shape = (?, 7500, 128)\n",
-      "res_layer_9_skip | shape = (?, 7500, 128)\n",
-      "output_skip_addition | shape = (?, 7500, 128)\n",
-      "output_conv1 | shape = (?, 7500, 256)\n",
-      "output_conv2 | shape = (?, 7500, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "input | shape = (?, 30000, 12)\n",
-      "stem_layer_1 | shape = (?, 15000, 128)\n",
-      "stem_layer_2 | shape = (?, 7500, 128)\n",
-      "res_layer_1_skip | shape = (?, 7500, 128)\n",
-      "res_layer_2_skip | shape = (?, 7500, 128)\n",
-      "res_layer_3_skip | shape = (?, 7500, 128)\n",
-      "res_layer_4_skip | shape = (?, 7500, 128)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "res_layer_5_skip | shape = (?, 7500, 128)\n",
-      "res_layer_6_skip | shape = (?, 7500, 128)\n",
-      "res_layer_7_skip | shape = (?, 7500, 128)\n",
-      "res_layer_8_skip | shape = (?, 7500, 128)\n",
-      "res_layer_9_skip | shape = (?, 7500, 128)\n",
-      "output_skip_addition | shape = (?, 7500, 128)\n",
-      "output_conv1 | shape = (?, 7500, 256)\n",
-      "output_conv2 | shape = (?, 7500, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "Training Start\n",
-      "Training End\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set data path\n",
     "data_path = os.path.join(DATA_PATH, 'formatted')\n",
     "\n",
     "# Set model name\n",
-    "training_run = 'hpt_11'\n",
+    "training_run = 'hpt_12'\n",
     "\n",
     "# Set sample length (seconds)\n",
     "duration = 60\n",
@@ -358,7 +95,7 @@
     "    fs = param\n",
     "\n",
     "    # Get training dataset dimensions\n",
-    "    length, channels = (int(duration * fs), len(ECG_LEADS))     \n",
+    "    length, channels = (int(duration * fs), 13)     \n",
     "\n",
     "    # Number of classes\n",
     "    classes = LABELS_COUNT\n",
