--- a/kardioml/models/deepecg_binary/notebooks/4_cross_validate_test.ipynb
+++ b/kardioml/models/deepecg_binary/notebooks/4_cross_validate_test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,10 +30,10 @@
     "\n",
     "# Local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(os.getcwd()))))))\n",
-    "from kardioml.models.deepecg.utils.devices.device_check import print_device_counts\n",
-    "from kardioml.models.deepecg.train.train import train\n",
-    "from kardioml.models.deepecg.model.model import Model\n",
-    "from kardioml import DATA_PATH, OUTPUT_PATH, LABELS_COUNT, NUM_LEADS\n",
+    "from kardioml.models.deepecg_binary.utils.devices.device_check import print_device_counts\n",
+    "from kardioml.models.deepecg_binary.train.train import train\n",
+    "from kardioml.models.deepecg_binary.model.model import Model\n",
+    "from kardioml import DATA_PATH, OUTPUT_PATH, ECG_LEADS\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -56,55 +56,19 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross-Validation Fold 2\n",
-      "Workstation has 1 CPUs.\n",
-      "Workstation has 2 GPUs.\n",
-      "Initializing Model\n",
-      "input | shape = (?, 15000, 13)\n",
-      "stem_layer_1 | shape = (?, 7500, 32)\n",
-      "stem_layer_2 | shape = (?, 3750, 64)\n",
-      "res_layer_1_skip | shape = (?, 3750, 64)\n",
-      "res_layer_2_skip | shape = (?, 3750, 64)\n",
-      "res_layer_3_skip | shape = (?, 3750, 64)\n",
-      "res_layer_4_skip | shape = (?, 3750, 64)\n",
-      "output_skip_addition | shape = (?, 3750, 64)\n",
-      "output_conv1 | shape = (?, 3750, 128)\n",
-      "output_conv2 | shape = (?, 3750, 256)\n",
-      "gap | shape = (?, 256)\n",
-      "logits | shape = (?, 9)\n",
-      "input | shape = (?, 15000, 13)\n",
-      "stem_layer_1 | shape = (?, 7500, 32)\n",
-      "stem_layer_2 | shape = (?, 3750, 64)\n",
-      "res_layer_1_skip | shape = (?, 3750, 64)\n",
-      "res_layer_2_skip | shape = (?, 3750, 64)\n",
-      "res_layer_3_skip | shape = (?, 3750, 64)\n",
-      "res_layer_4_skip | shape = (?, 3750, 64)\n",
-      "output_skip_addition | shape = (?, 3750, 64)\n",
-      "output_conv1 | shape = (?, 3750, 128)\n",
-      "output_conv2 | shape = (?, 3750, 256)\n",
-      "gap | shape = (?, 256)\n",
-      "logits | shape = (?, 9)\n",
-      "Training Start\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set data path\n",
     "data_path = os.path.join(DATA_PATH, 'formatted')\n",
     "\n",
     "# Set model name\n",
-    "training_run = '31'\n",
+    "training_run = '26'\n",
     "\n",
     "# Set sample length (seconds)\n",
     "duration = 60\n",
     "\n",
     "# Loop through CV folds\n",
-    "for cv_fold in np.arange(2, 6):\n",
+    "for cv_fold in np.arange(1, 6):\n",
     "    \n",
     "    print('Cross-Validation Fold {}'.format(cv_fold))\n",
     "    \n",
@@ -128,20 +92,20 @@
     "    seed = 0                                                         \n",
     "\n",
     "    # Set sample frequency\n",
-    "    fs = 250\n",
+    "    fs = 350\n",
     "\n",
     "    # Get training dataset dimensions\n",
-    "    length, channels = (int(duration * fs), NUM_LEADS + 1)          \n",
+    "    length, channels = (int(duration * fs), len(ECG_LEADS))          \n",
     "\n",
     "    # Number of classes\n",
-    "    classes = LABELS_COUNT\n",
+    "    classes = 2\n",
     "\n",
     "    # Choose network\n",
     "    network_name = 'DeepECGV1'\n",
     "\n",
     "    # Set hyper-parameter\n",
-    "    hyper_params = {'num_res_layers': 4, 'drop_rate': 0.3, 'kernel_size': 3, \n",
-    "                    'conv_filts': 64, 'res_filts': 64, 'skip_filts': 64, \n",
+    "    hyper_params = {'num_res_layers': 9, 'drop_rate': 0.3, 'kernel_size': 3, \n",
+    "                    'conv_filts': 128, 'res_filts': 128, 'skip_filts': 128, \n",
     "                    'dilation': True, 'fs': fs}\n",
     "\n",
     "    # Set network inputs\n",
@@ -160,7 +124,7 @@
     "\n",
     "    # Set hyper-parameters\n",
     "    epochs = 60\n",
-    "    batch_size = 128       \n",
+    "    batch_size = 16            \n",
     "\n",
     "    # Train model\n",
     "    print('Training Start')\n",
