--- a/notebooks/2_visualize_formatted_data.ipynb
+++ b/notebooks/2_visualize_formatted_data.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -47,18 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7abf3923ca8e4b9abc0adf8551c10f9b",
+       "model_id": "8918a3966eca42e38c2d7859bebe7091",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=239, description='filename_id', max=478), Output()), _dom_classes=('widg…"
+       "interactive(children=(IntSlider(value=3438, description='filename_id', max=6876), Output()), _dom_classes=('wi…"
       ]
      },
      "metadata": {},
@@ -67,7 +76,7 @@
    ],
    "source": [
     "# Launch interactive plotter\n",
-    "waveform_plot_interact(dataset='physionet_2020_2')"
+    "waveform_plot_interact(dataset='physionet_2020_1')"
    ]
   },
   {
@@ -75,7 +84,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "5999"
+   ]
   }
  ],
  "metadata": {
