--- a/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
+++ b/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
@@ -18,17 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
     "import sys\n",
     "import json\n",
     "import random\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from iterstrat.ml_stratifiers import MultilabelStratifiedKFold\n",
     "\n",
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(os.getcwd()))))))\n",
@@ -53,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -86,31 +97,31 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>A0001</td>\n",
-       "      <td>RBBB</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 1, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>A0002</td>\n",
-       "      <td>Normal</td>\n",
+       "      <td>[0, 0, 0, 1, 0, 0, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>A0003</td>\n",
-       "      <td>AF</td>\n",
+       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>A0004</td>\n",
-       "      <td>AF</td>\n",
+       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>A0005</td>\n",
-       "      <td>PVC</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 1, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -118,15 +129,22 @@
        "</div>"
       ],
       "text/plain": [
-       "  filename  labels                                               path\n",
-       "0    A0001    RBBB  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "1    A0002  Normal  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "2    A0003      AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "3    A0004      AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "4    A0005     PVC  C:\\Users\\sebastian goodfellow\\Documents\\code\\p..."
+       "  filename                       labels  \\\n",
+       "0    A0001  [0, 0, 0, 0, 0, 0, 1, 0, 0]   \n",
+       "1    A0002  [0, 0, 0, 1, 0, 0, 0, 0, 0]   \n",
+       "2    A0003  [1, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "3    A0004  [1, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "4    A0005  [0, 0, 0, 0, 0, 1, 0, 0, 0]   \n",
+       "\n",
+       "                                                path  \n",
+       "0  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "1  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "2  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "3  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "4  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,14 +155,15 @@
     "             if 'json' in file]\n",
     "\n",
     "# Get label for each file\n",
-    "labels = list()\n",
+    "data_1 = {'filename': [], 'labels': []}\n",
     "for filename in filenames:\n",
     "    meta_data = json.load(open(os.path.join(DATA_PATH, 'physionet_2020_1', 'formatted', '{}.json'.format(filename))))\n",
-    "    labels.append('{}-{}'.format(meta_data['labels'][0], meta_data['labels'][1]) if len(meta_data['labels']) > 1 \n",
-    "                                 else meta_data['labels'][0])\n",
+    "    if meta_data['labels']:\n",
+    "        data_1['filename'].append(filename)\n",
+    "        data_1['labels'].append(meta_data['label_train'])\n",
     "\n",
     "# Combine\n",
-    "data_1 = pd.DataFrame({'filename': filenames, 'labels': labels})\n",
+    "data_1 = pd.DataFrame(data_1)\n",
     "\n",
     "# Add path\n",
     "data_1['path'] = data_1['filename'].map(lambda filename: os.path.join(DATA_PATH, 'physionet_2020_1', 'formatted', filename))\n",
@@ -162,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -195,31 +214,31 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>Q0023</td>\n",
-       "      <td>STE</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>Q0026</td>\n",
-       "      <td>PAC</td>\n",
+       "      <td>[0, 0, 0, 0, 1, 0, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>Q0033</td>\n",
-       "      <td>LBBB</td>\n",
+       "      <td>[0, 0, 1, 0, 0, 0, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>Q0037</td>\n",
-       "      <td>AF</td>\n",
+       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>Q0040</td>\n",
-       "      <td>PAC</td>\n",
+       "      <td>[0, 0, 0, 0, 1, 0, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -227,15 +246,22 @@
        "</div>"
       ],
       "text/plain": [
-       "  filename labels                                               path\n",
-       "0    Q0023    STE  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "1    Q0026    PAC  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "2    Q0033   LBBB  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "3    Q0037     AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "4    Q0040    PAC  C:\\Users\\sebastian goodfellow\\Documents\\code\\p..."
+       "  filename                       labels  \\\n",
+       "0    Q0023  [0, 0, 0, 0, 0, 0, 0, 0, 1]   \n",
+       "1    Q0026  [0, 0, 0, 0, 1, 0, 0, 0, 0]   \n",
+       "2    Q0033  [0, 0, 1, 0, 0, 0, 0, 0, 0]   \n",
+       "3    Q0037  [1, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "4    Q0040  [0, 0, 0, 0, 1, 0, 0, 0, 0]   \n",
+       "\n",
+       "                                                path  \n",
+       "0  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "1  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "2  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "3  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "4  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,14 +272,15 @@
     "             if 'json' in file]\n",
     "\n",
     "# Get label for each file\n",
-    "labels = list()\n",
+    "data_2 = {'filename': [], 'labels': []}\n",
     "for filename in filenames:\n",
     "    meta_data = json.load(open(os.path.join(DATA_PATH, 'physionet_2020_2', 'formatted', '{}.json'.format(filename))))\n",
-    "    labels.append('{}'.format(meta_data['labels'][0]) if len(meta_data['labels']) > 1 \n",
-    "                                 else meta_data['labels'][0])\n",
+    "    if meta_data['labels']:\n",
+    "        data_2['filename'].append(filename)\n",
+    "        data_2['labels'].append(meta_data['label_train'])\n",
     "\n",
     "# Combine\n",
-    "data_2 = pd.DataFrame({'filename': filenames, 'labels': labels})\n",
+    "data_2 = pd.DataFrame(data_2)\n",
     "\n",
     "# Add path\n",
     "data_2['path'] = data_2['filename'].map(lambda filename: os.path.join(DATA_PATH, 'physionet_2020_2', 'formatted', filename))\n",
@@ -271,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -304,31 +331,31 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>A0001</td>\n",
-       "      <td>RBBB</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 1, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>A0002</td>\n",
-       "      <td>Normal</td>\n",
+       "      <td>[0, 0, 0, 1, 0, 0, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>A0003</td>\n",
-       "      <td>AF</td>\n",
+       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>A0004</td>\n",
-       "      <td>AF</td>\n",
+       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>A0005</td>\n",
-       "      <td>PVC</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 1, 0, 0, 0]</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -336,15 +363,22 @@
        "</div>"
       ],
       "text/plain": [
-       "  filename  labels                                               path\n",
-       "0    A0001    RBBB  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "1    A0002  Normal  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "2    A0003      AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "3    A0004      AF  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
-       "4    A0005     PVC  C:\\Users\\sebastian goodfellow\\Documents\\code\\p..."
+       "  filename                       labels  \\\n",
+       "0    A0001  [0, 0, 0, 0, 0, 0, 1, 0, 0]   \n",
+       "1    A0002  [0, 0, 0, 1, 0, 0, 0, 0, 0]   \n",
+       "2    A0003  [1, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "3    A0004  [1, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "4    A0005  [0, 0, 0, 0, 0, 1, 0, 0, 0]   \n",
+       "\n",
+       "                                                path  \n",
+       "0  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "1  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "2  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "3  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "4  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,20 +400,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set split ratios\n",
-    "train_size = 0.8\n",
-    "val_size = 0.2\n",
-    "assert train_size + val_size == 1\n",
-    "\n",
     "# Split dataset into train/evaluate\n",
-    "data_train, data_val = train_test_split(data, test_size=val_size, stratify=data['labels'], random_state=0, shuffle=True)\n",
-    "\n",
+    "rmskf = MultilabelStratifiedKFold(n_splits=5, random_state=0)\n",
+    "for train_index, val_index in rmskf.split(np.stack(data['labels'].values), np.stack(data['labels'].values)):\n",
+    "    pass\n",
+    "   \n",
     "# Lookup file\n",
-    "training_lookup = {'train': data_train['path'].tolist(), 'val': data_val['path'].tolist()}"
+    "training_lookup = {'train': data.loc[train_index, 'path'].tolist(), 'val': data.loc[val_index, 'path'].tolist()}"
    ]
   },
   {
@@ -392,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
