--- a/kardioml/models/deepecg_binary/notebooks/2_create_cross_validation_dataset.ipynb
+++ b/kardioml/models/deepecg_binary/notebooks/2_create_cross_validation_dataset.ipynb
@@ -18,28 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
     "import sys\n",
     "import json\n",
     "import random\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import StratifiedKFold\n",
-    "from iterstrat.ml_stratifiers import MultilabelStratifiedKFold\n",
     "\n",
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(os.getcwd()))))))\n",
@@ -63,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,31 +105,31 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>A0001</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 1, 0, 0]</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>A0002</td>\n",
-       "      <td>[0, 0, 0, 1, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>Normal</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>A0003</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>A0004</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>A0005</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 1, 0, 0, 0]</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -148,22 +137,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  filename                       labels  \\\n",
-       "0    A0001  [0, 0, 0, 0, 0, 0, 1, 0, 0]   \n",
-       "1    A0002  [0, 0, 0, 1, 0, 0, 0, 0, 0]   \n",
-       "2    A0003  [1, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
-       "3    A0004  [1, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
-       "4    A0005  [0, 0, 0, 0, 0, 1, 0, 0, 0]   \n",
-       "\n",
-       "                                                path  \n",
-       "0  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "1  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "2  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "3  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "4  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  "
+       "  filename  labels                                               path\n",
+       "0    A0001   Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "1    A0002  Normal  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "2    A0003   Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "3    A0004   Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "4    A0005   Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p..."
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,9 +159,8 @@
     "data_1 = {'filename': [], 'labels': []}\n",
     "for filename in filenames:\n",
     "    meta_data = json.load(open(os.path.join(DATA_PATH, 'physionet_2020_1', 'formatted', '{}.json'.format(filename))))\n",
-    "    if meta_data['labels']:\n",
-    "        data_1['filename'].append(filename)\n",
-    "        data_1['labels'].append(meta_data['label_train'])\n",
+    "    data_1['filename'].append(filename)\n",
+    "    data_1['labels'].append('Normal' if meta_data['labels'] and 'Normal' in meta_data['labels'] else 'Other')\n",
     "\n",
     "# Combine\n",
     "data_1 = pd.DataFrame(data_1)\n",
@@ -200,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -232,32 +213,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>Q0023</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 1]</td>\n",
+       "      <td>Q0001</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>Q0026</td>\n",
-       "      <td>[0, 0, 0, 0, 1, 0, 0, 0, 0]</td>\n",
+       "      <td>Q0002</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>Q0033</td>\n",
-       "      <td>[0, 0, 1, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>Q0003</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>Q0037</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>Q0004</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>Q0040</td>\n",
-       "      <td>[0, 0, 0, 0, 1, 0, 0, 0, 0]</td>\n",
+       "      <td>Q0005</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -265,22 +246,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  filename                       labels  \\\n",
-       "0    Q0023  [0, 0, 0, 0, 0, 0, 0, 0, 1]   \n",
-       "1    Q0026  [0, 0, 0, 0, 1, 0, 0, 0, 0]   \n",
-       "2    Q0033  [0, 0, 1, 0, 0, 0, 0, 0, 0]   \n",
-       "3    Q0037  [1, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
-       "4    Q0040  [0, 0, 0, 0, 1, 0, 0, 0, 0]   \n",
-       "\n",
-       "                                                path  \n",
-       "0  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "1  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "2  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "3  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "4  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  "
+       "  filename labels                                               path\n",
+       "0    Q0001  Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "1    Q0002  Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "2    Q0003  Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "3    Q0004  Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "4    Q0005  Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p..."
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,9 +268,8 @@
     "data_2 = {'filename': [], 'labels': []}\n",
     "for filename in filenames:\n",
     "    meta_data = json.load(open(os.path.join(DATA_PATH, 'physionet_2020_2', 'formatted', '{}.json'.format(filename))))\n",
-    "    if meta_data['labels']:\n",
-    "        data_2['filename'].append(filename)\n",
-    "        data_2['labels'].append(meta_data['label_train'])\n",
+    "    data_2['filename'].append(filename)\n",
+    "    data_2['labels'].append('Normal' if meta_data['labels'] and 'Normal' in meta_data['labels'] else 'Other')\n",
     "\n",
     "# Combine\n",
     "data_2 = pd.DataFrame(data_2)\n",
@@ -317,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -350,31 +323,31 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>A0001</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 1, 0, 0]</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>A0002</td>\n",
-       "      <td>[0, 0, 0, 1, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>Normal</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>A0003</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>A0004</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>A0005</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 1, 0, 0, 0]</td>\n",
+       "      <td>Other</td>\n",
        "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -382,22 +355,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  filename                       labels  \\\n",
-       "0    A0001  [0, 0, 0, 0, 0, 0, 1, 0, 0]   \n",
-       "1    A0002  [0, 0, 0, 1, 0, 0, 0, 0, 0]   \n",
-       "2    A0003  [1, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
-       "3    A0004  [1, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
-       "4    A0005  [0, 0, 0, 0, 0, 1, 0, 0, 0]   \n",
-       "\n",
-       "                                                path  \n",
-       "0  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "1  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "2  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "3  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
-       "4  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  "
+       "  filename  labels                                               path\n",
+       "0    A0001   Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "1    A0002  Normal  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "2    A0003   Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "3    A0004   Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...\n",
+       "4    A0005   Other  C:\\Users\\sebastian goodfellow\\Documents\\code\\p..."
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,19 +385,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize K-Folds\n",
-    "rmskf = MultilabelStratifiedKFold(n_splits=5, random_state=0)\n",
+    "skf = StratifiedKFold(n_splits=5, random_state=0, shuffle=True)\n",
     "\n",
     "# Loop through folds\n",
-    "for cv_fold, (train_index, val_index) in enumerate(rmskf.split(np.stack(data['labels'].values), \n",
-    "                                                               np.stack(data['labels'].values))):\n",
+    "for cv_fold, (train_index, val_index) in enumerate(skf.split(data, data['labels'])):\n",
     "\n",
     "    # Lookup file\n",
-    "    training_lookup = {'train': data.loc[train_index, 'path'].tolist(), 'val': data.loc[val_index, 'path'].tolist()}\n",
+    "    training_lookup = {'train': data.loc[train_index, 'path'].tolist(), \n",
+    "                       'val': data.loc[val_index, 'path'].tolist()}\n",
     "    \n",
     "    # Add augmentationd data\n",
     "#     training_lookup['val'].extend(paths)\n",
@@ -442,8 +408,9 @@
     "#     random.shuffle(training_lookup['val'])\n",
     "    \n",
     "    # Save file\n",
-    "    os.makedirs(os.path.join(DATA_PATH, 'deepecg', 'cross_validation', str(cv_fold + 1)), exist_ok=True)\n",
-    "    with open(os.path.join(DATA_PATH, 'deepecg', 'cross_validation', str(cv_fold + 1), 'training_lookup.json'), 'w') as file:\n",
+    "    os.makedirs(os.path.join(DATA_PATH, 'deepecg_binary', 'cross_validation', str(cv_fold + 1)), exist_ok=True)\n",
+    "    with open(os.path.join(DATA_PATH, 'deepecg_binary', 'cross_validation', \n",
+    "                           str(cv_fold + 1), 'training_lookup.json'), 'w') as file:\n",
     "        json.dump(training_lookup, file, sort_keys=True)"
    ]
   }
