--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -50,15 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Formatting Physionet2020 dataset...\n",
-      "Extracting dataset...\n"
+      "Formatting Physionet2020 dataset...\n"
      ]
     }
    ],
@@ -67,7 +75,7 @@
     "data = FormatDataPhysionet2020(tranche=1)\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=True, debug=False)"
+    "data.format(extract=False, debug=False)"
    ]
   },
   {
@@ -79,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -88,8 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Formatting Physionet2020 dataset...\n",
-      "Extracting dataset...\n"
+      "Formatting Physionet2020 dataset...\n"
      ]
     }
    ],
@@ -98,7 +105,7 @@
     "data = FormatDataPhysionet2020(tranche=2)\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=True, debug=False)"
+    "data.format(extract=False, debug=False)"
    ]
   },
   {
@@ -128,18 +135,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.9"
   }
  },
  "nbformat": 4,
